ChangeLog for package rkwarddev

## 0.03-4 (2011-10-10)
  - added functions rk.XML.code() and rk.XML.help()
  - fixed bug in internal function check.ID() (produced false entry nodes under certain circumstances)
  - fixed bug in rk.XML.pluginmap() for automatic component IDs
  - cleaned up rk.XML.pluginmap() and rk.XML.plugin() hint code
  - changed "nodes" option to "..." also in rk.XML.menu()

## 0.03-3 (2011-10-09)
  - replaced most of the "nodes" and "children" options with "..." in functions rk.rkh.related(), rk.rkh.settings(),
    rk.XML.col(), rk.XML.components(), rk.XML.context(), rk.XML.dialog(), rk.XML.frame(), rk.XML.hierarchy(), rk.XML.logic(),
    rk.XML.page(), rk.XML.row(), rk.XML.snippet(), rk.XML.snippets() and rk.XML.wizard(). therefore, you don't
    need to list() objects any more.
  - any function which generates an ID now has an automation mechanism for it, which is also the default.

## 0.03-2 (2011-10-09)
  - fixed skeleton GUI pluginmap not being found

## 0.03-1 (2011-10-08)
  - added new shortcut function qp() -- "quote + plus" -- for id()
  - added option to create arrays with rk.JS.options()
  - enhanced class rk.JS.opt
  - rk.paste.JS() now adds some comments to the generated code
  - fixed wrong default value for "required" in rk.XML.browser()
  - added demo script
  - added skeleton GUI, was generated by the demo script

## 0.03-0 (2011-10-07)
  - redesigned options for rk.plugin.skeleton() again, to make them more intuitive and flexible
    at the same time. unfortunately, this breaks backwards compatibility again.
  - rk.plugin.skeleton() and rk.XML.pluginmap() now only accept rk.XML.about() made objects
    for "about"
  - rk.plugin.skeleton() uses internal function XML2person() to create nicer Authors@R entries in DESCRIPTION
  - fixed bug in id() (now generates JS variable names, not XML IDs)

## 0.02-5 (2011-10-06)
  - added functions rk.rkh.caption(), rk.rkh.link(), rk.rkh.related(), rk.rkh.section(), rk.rkh.setting(),